# booking-app

backend/: Cargo.toml
backend/src/: lib.rs  main.rs  routes.rs  tests.rs  types.rs
frontend/: package.json  pnpm-lock.yaml
frontend/coverage/: clover.xml  coverage-final.json  index.html
frontend/coverage/src/: App.tsx.html  index.html  main.tsx.html
frontend/coverage/src/components/: AdminDashboard.tsx.html  BookingForm.tsx.html  Greeting.tsx.html  index.html
frontend/coverage/src/lib/: api.ts.html  index.html
frontend/src/: main.tsx
frontend/src/components/: AdminDashboard.test.tsx  AdminDashboard.tsx  BookingForm.test.tsx  BookingForm.tsx  Greeting.test.tsx  Greeting.tsx
frontend/src/lib/: api.test.ts  api.ts
